@@ -4,5 +4,6 @@ djangocanvas (0.1) unstable; urgency=low
     @EWD-588 add support to vk.com authorization
     @EWD-588 add tests, some fixes, update readme
     @EWD-588 add support for user notification
+    @EWD-588 add redirect to authorization view for non-authorized users
 
  -- Anton Volozhanin <zzzombat@gmail.com>  Tue, 7 Mar 2013 13:22:23 +0400
